--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-toastify": "^10.0.5",
+    "tailwindcss": "^4.1.18",
     "valibot": "^1.0.0-beta.0",
     "zod": "^3.23.8"
   },
